fix spacing for profile info

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -26,7 +26,7 @@
 }
 
 .profile-nav  {
-    margin-top: 35px;
+    margin-top: 70px;
     margin-bottom: 45px;
     height: 200px;
     width: 540px;
